--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,9 @@
-# force deploy trigger
 services:
   - type: web
     name: sweetwater-stock-checker
     env: python
     buildCommand: |
       pip install -r requirements.txt
-      playwright install --with-deps
+      npx playwright install chromium --with-deps
     startCommand: gunicorn app:app
     plan: free
