--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: sweetwater-stock-checker
     env: python
-    buildCommand: |
-      pip install -r requirements.txt
-      npx playwright install chromium --with-deps
+   buildCommand: |
+  pip install -r requirements.txt
+  python -m playwright install chromium
     startCommand: gunicorn app:app
     plan: free
