--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
     name: sweetwater-stock-checker
-    env: python
-   buildCommand: |
-  pip install -r requirements.txt
-  python -m playwright install chromium
+    runtime: python
+    buildCommand: |
+      pip install -r requirements.txt
+      python -m playwright install chromium
     startCommand: gunicorn app:app
-    plan: free
