--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,5 @@ services:
     runtime: python
     buildCommand: |
       pip install -r requirements.txt
-      python -m playwright install chromium
+      npx playwright install chromium --with-deps --force
     startCommand: gunicorn app:app
