--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,11 @@
 services:
   - type: web
     name: sweetwater-stock-checker
-    runtime: python
+    env: python
     buildCommand: |
       pip install -r requirements.txt
-      npx playwright install chromium
+      npx playwright install chromium --with-deps --force
     startCommand: gunicorn app:app
+    envVars:
+      - key: PLAYWRIGHT_BROWSERS_PATH
+        value: /opt/render/.cache/ms-playwright
